--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root {
+/*:root {
   --bg: #111;
   --fg: #eee;
   --disabled-accent: #2b746f;
@@ -219,4 +219,55 @@ canvas#canvas {
   left: 0;
   width: 100%;
   height: 100%;
+}*/
+
+
+:root{
+  background-color: grey;
+}
+
+a {
+}
+
+a:link {
+  color: inherit;
+}
+
+a:visited {
+  color: inherit;
+
+}
+
+a:focus {
+  color: inherit;
+
+}
+
+a:hover {
+  color: inherit;
+
+}
+
+a:active {
+  color: inherit;
+}
+
+button{
+  font-family: "m6x11plus";
+  font-size: 26px;
+  background-color: green;
+  color: white;
+  border-radius: 8px;
+  box-shadow: none;
+  outline: none;
+  padding: 10px 35px;
+}
+
+.container{
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.center{
+  justify-content: center;
 }
